--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
+    "@types/pg": "^8.6.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
